--- a/JavaScript/Class work/lesson2.html
+++ b/JavaScript/Class work/lesson2.html
@@ -15,8 +15,7 @@
     // let b = +prompt('Укажите второе число')
     // if (a > b) {
     //     console.log(a)
-    // }
-    // if (a === b) {
+    // } else if (a === b) {
     //     console.log("Они одинаковые")
     // } else {
     //     console.log(b)
@@ -82,24 +81,23 @@
     // let lotoZabava = +prompt('Введите число от 1 до 5')
     // switch (lotoZabava) {
     //     case 1:
-    //         console.log('Вы выиграли встречу с Илоном Маском')
+    //         alert('Вы выиграли встречу с Илоном Маском')
     //         break
     //     case 2:
-    //         console.log('Вы выиграли миостимулятор')
+    //         alert('Вы выиграли миостимулятор')
     //         break
     //     case 3:
-    //         console.log('Вы выиграли полёт на Луну')
+    //         alert('Вы выиграли полёт на Луну')
     //         break
     //     case 4:
-    //         console.log('Вы выиграли квартиру')
+    //         alert('Вы выиграли квартиру')
     //         break
     //     case 5:
-    //         console.log('Вы выиграли экскурсию на Crew Dragon')
+    //         alert('Вы выиграли экскурсию на Crew Dragon')
     //         break
     //     default:
     //         alert('Просили ж ввести от 1 до 5, теперь вы должны денег')
-    // }
-
+    //  }
 
 
 </script>
