--- a/JavaScript/Home work/lesson2.html
+++ b/JavaScript/Home work/lesson2.html
@@ -13,9 +13,9 @@
 
     // let time = +prompt('Enter time');
     // if (time >= 0 && time <= 15) alert('Первая четверть')
-    // if (time > 15 && time <= 30) alert('Вторая четверть')
-    // if (time > 30 && time <= 45) alert('Третья четверть')
-    // if (time > 45 && time <= 59) alert('Четвертвая четверть')
+    // else if  (time > 15 && time <= 30) alert('Вторая четверть')
+    // else if  (time > 30 && time <= 45) alert('Третья четверть')
+    // else if (time > 45 && time <= 59) alert('Четвёртая четверть')
 
 
     // - У змінній day дано якесь число від 1 до 31. Потрібно визначити, у яку половину(декаду)
@@ -23,8 +23,8 @@
 
     // let day = +prompt('Введите число')
     // if (day >= 1 && day <= 10) alert('Первая декада')
-    // if (day > 10 && day <= 20) alert('Вторая декада')
-    // if (day > 20 && day <= 31) alert('Третья декада')
+    // else if (day > 10 && day <= 20) alert('Вторая декада')
+    // else if (day > 20 && day <= 31) alert('Третья декада')
 
     // - У нас є змінна test, якщо  не дорівнює true, виведіть 'Вірно', інакше виведіть 'Неправильно'.
     // Перевірте роботу скрипта при test, що дорівнює true, false. Напишіть два варіанти скрипта
@@ -82,7 +82,7 @@
     // let year = +prompt('Введите количество дней в этом году')
     // if (year % 2 === 0) {
     //     console.log('Год:Высокосный')}
-    //     else {
+    // else {
     //     console.log('Год: Не Высокосный')
     // }
 
@@ -96,7 +96,8 @@
     // let ofName = prompt('Какое официальное название JavaScript ')
     // if (ofName === 'ECMAScript' ){
     //     console.log('Правильно')
-    // } else {
+    // }
+    // else {
     //     console.log('Не знаєте? ECMAScript!')
     // }
 
