--- a/JavaScript/Class work/lesson6/index.html
+++ b/JavaScript/Class work/lesson6/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>cw6</title>
 </head>
 <body>
-
 <script src="main.js"></script>
 </body>
 </html>
